--- a/fallsea-motan-demo/fallsea-motan-client-demo/pom.xml
+++ b/fallsea-motan-demo/fallsea-motan-client-demo/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>fallsea</groupId>
-  <artifactId>fallsea-motan-client</artifactId>
+  <artifactId>fallsea-motan-client-demo</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   
@@ -14,42 +14,40 @@
     <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.7</java.version>
-		<motan.version>0.3.1</motan.version>
 	</properties>
 
     <dependencies>
+   	 <dependency>
+			<groupId>fallsea</groupId>
+			<artifactId>fallsea-motan-client</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
         <dependency>
+			<groupId>fallsea</groupId>
+			<artifactId>fallsea-motan-api-demo</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+		
+		
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-		<dependency>  
-		    <groupId>org.springframework.boot</groupId>  
-		    <artifactId>spring-boot-configuration-processor</artifactId>  
-		    <optional>true</optional>  
-		</dependency>
 		<dependency>
-		     <groupId>com.weibo</groupId>
-		     <artifactId>motan-core</artifactId>
-		     <version>${motan.version}</version>
-		 </dependency>
-		 <dependency>
-		     <groupId>com.weibo</groupId>
-		     <artifactId>motan-transport-netty</artifactId>
-		     <version>${motan.version}</version>
-		 </dependency>
-		 
-		 <dependency>
-		     <groupId>com.weibo</groupId>
-		     <artifactId>motan-springsupport</artifactId>
-		     <version>${motan.version}</version>
-		 </dependency>
-		 
-		 <dependency>
-		     <groupId>com.weibo</groupId>
-		     <artifactId>motan-registry-zookeeper</artifactId>
-		     <version>${motan.version}</version>
-		 </dependency>
-		 
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-web</artifactId>
+	    </dependency>
+		<!-- 引入log4j依赖 --> 
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-log4j</artifactId>
+		    <version>1.3.8.RELEASE</version>
+		</dependency>
+	    <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 
 
